[project]
name = "tilekiln"
dynamic = ["version"]
description = "A set of command-line utilities to generate and serve Mapbox Vector Tiles (MVTs)"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    { name = "Paul Norman", email = "osm@paulnorman.ca" },
]
requires-python = ">=3.10, <4"
keywords = [
    "mvt",
    "openstreetmap",
    "osm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "Click",
    "fastapi",
    "fs",
    "Jinja2",
    "pmtiles",
    "prometheus_client",
    "psycopg",
    "psycopg_pool",
    "pyyaml",
    "tqdm",
    "uvicorn",
]

[project.urls]
"Bug Reports" = "https://github.com/pnorman/tilekiln/issues"
Homepage = "https://github.com/pnorman/tilekiln"
Source = "https://github.com/pnorman/tilekiln/"

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

# Allows pypi uploads. ref: https://github.com/ofek/hatch-vcs/discussions/12
[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[project.scripts]
tilekiln = "tilekiln.main:cli"

[tool.hatch.build.targets.sdist]
include = [
    "/tilekiln",
]
